force-app/main/default/objects/Job_App_Settings__c/Job_App_Settings__c.object-meta.xml
<CustomObject>
    <label>Job App Settings</label>
    <nameField>
        <displayFormat>JAS-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Job App Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job App Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>