force-app/main/default/objects/Job_App_Settings__c/fields/Desired_Location__c.field-meta.xml
<CustomField>
    <fullName>Desired_Location__c</fullName>
    <inlineHelpText>If adding more than one location be sure to add a space between each location</inlineHelpText>
    <label>Desired Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>