force-app/main/default/objects/Job_App_Settings__c/fields/Desired_Salary__c.field-meta.xml
<CustomField>
    <fullName>Desired_Salary__c</fullName>
    <label>Desired Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>