force-app/main/default/objects/Job_App_Settings__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <inlineHelpText>If adding more than one keyword be sure to add a space between each keyword</inlineHelpText>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>